--- a/src/components/BorderRadius/borderradius.css
+++ b/src/components/BorderRadius/borderradius.css
@@ -2,7 +2,7 @@ label {
     display:flex;
     justify-content:space-between;
     font-size: 1.5rem;
-    margin-bottom: 2.5vh;
+    font-weight: bold;
 }
 
 input {
@@ -10,6 +10,26 @@ input {
 }
 
 p {
-    margin-top: 2.5vh;
+    font-weight: bold;
     font-size: 1.5rem;
+    background-color: rgba(255, 250, 250, 0.397);
+    /* width: 100%; */
+    padding: 2vh;
+    border-radius: 5px;
+
+}
+
+input[type=range] {
+    -webkit-appearance: none;
+    background-color: rgba(1, 115, 87, 0.696);
+    border-radius: 5px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 2vh;
+    width: 2vh;
+    border-radius: 50%;
+    background: black;
+    /* ...my custom edits... */
 }
